--- a/pondera.html
+++ b/pondera.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Método AHP - Módulos 1, 2, 3 e 4 (Média Aritmética)</title>
+    <title>Método AHP (Média Aritmética)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Método AHP - Módulos 1, 2, 3 e 4</h2>
+        <h2>Método AHP - Ponderação de Critérios</h2>
         
         <!-- Módulo 1: Adição de Critérios -->
         <div id="criteria-container">
