--- a/pondera.html
+++ b/pondera.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Método AHP (Média Aritmética)</title>
+    <title>Método AHP - Módulos 1, 2, 3 e 4 (Média Aritmética)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            align-items: flex-start;
             height: 100vh;
             margin: 0;
+            overflow: hidden; /* Impede que a página tenha uma barra de rolagem horizontal */
         }
         .container {
             width: 90%;
             max-width: 600px;
+            max-height: 90vh;
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow-y: auto; /* Adiciona barra de rolagem vertical */
         }
         h2 {
             text-align: center;
@@ -292,3 +294,4 @@
     </script>
 </body>
 </html>
+
