--- a/pondera.html
+++ b/pondera.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Método AHP para ponderar critérios (Média Aritmética)</title>
+    <title>Método AHP - ponderar critérios (Média Aritmética)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
